--- a/yaml/voice_matching_cloudformation.yaml
+++ b/yaml/voice_matching_cloudformation.yaml
@@ -208,7 +208,8 @@ Resources:
 
                   transcription_results = process_batch(audio_files)
 
-                  output_key = f"{output_prefix}transcription_results.json"
+                  timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')
+                  output_key = f"{output_prefix}transcription_results_{timestamp}.json"
                   s3_client.put_object(
                       Bucket=output_bucket,
                       Key=output_key,
@@ -219,7 +220,8 @@ Resources:
                       'statusCode': 200,
                       'body': json.dumps({
                           'message': 'Transcription completed',
-                          'transcription_results_key': output_key
+                          'transcription_results_key': output_key,
+                          'timestamp': timestamp
                       })
                   }
               except Exception as e:
@@ -265,19 +267,27 @@ Resources:
                   output_bucket = os.environ['OUTPUT_BUCKET']
                   output_prefix = os.environ['OUTPUT_PREFIX']
 
-                  # Download transcription results
-                  transcription_files = s3_client.list_objects_v2(
-                      Bucket=input_bucket, 
-                      Prefix=input_prefix
-                  )['Contents']
-
-                  transcription_file = transcription_files[0]
+                  # Get transcription file info from the event
+                  event_body = json.loads(event.get('body', '{}'))
+                  transcription_key = event_body.get('transcription_results_key')
+                  
+                  if not transcription_key:
+                      raise Exception("No transcription_results_key provided in the event")
+                      
                   local_transcription_path = '/tmp/transcription_results.json'
-                  s3_client.download_file(
-                      input_bucket, 
-                      transcription_file['Key'], 
-                      local_transcription_path
-                  )
+                  
+                  try:
+                      # Download the file
+                      s3_client.download_file(
+                          input_bucket,
+                          transcription_key,
+                          local_transcription_path
+                      )
+                  except s3_client.exceptions.ClientError as e:
+                      if e.response['Error']['Code'] == '404':
+                          raise Exception(f"Transcription file not found at {transcription_key}. Please ensure TranscribeAudioLambda has completed successfully.")
+                      else:
+                          raise Exception(f"Error accessing transcription file: {str(e)}")
 
                   # Download input dictionary
                   input_dict_path = '/tmp/input_dictionary.json'
@@ -360,6 +370,7 @@ Resources:
                 "Type": "Task",
                 "Resource": "${PollyAudioGeneratorLambda.Arn}",
                 "Next": "Transcription",
+                "ResultPath": "$.audio_generation_result",
                 "Retry": [
                   {
                     "ErrorEquals": ["States.ALL"],
@@ -373,6 +384,7 @@ Resources:
                 "Type": "Task",
                 "Resource": "${TranscribeAudioLambda.Arn}",
                 "Next": "ProcessTranscriptions",
+                "ResultPath": "$.transcription_result",
                 "Retry": [
                   {
                     "ErrorEquals": ["States.ALL"],
@@ -386,6 +398,8 @@ Resources:
                 "Type": "Task",
                 "Resource": "${ProcessTranscriptionsLambda.Arn}",
                 "End": true,
+                "InputPath": "$.transcription_result",
+                "ResultPath": "$.process_result",
                 "Retry": [
                   {
                     "ErrorEquals": ["States.ALL"],
